add tft game link

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     </head>
     <body>
-        
+
         <header>
             <div>
                 <img src="https://github.com/rafaelcdev.png" 
@@ -54,6 +54,15 @@
                                 <img src="https://static-cdn.jtvnw.net/ttv-boxart/516575-188x250.jpg" alt="Valorant">
                             </a>
                         </li>
+
+                        <li>
+                            <a 
+                            target="_blank"
+                            href="https://www.twitch.tv/directory/game/Counter-Strike%3A%20Global%20Offensive">
+                                <img src="https://static-cdn.jtvnw.net/ttv-boxart/32399_IGDB-188x250.jpg" alt="Counter Strike">
+                            </a>
+                        </li>
+
                     </ul>
                 </div>
             </section>
